--- a/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
+++ b/src/components/DiaryAddProductForm/DiaryAddProductForm.module.scss
@@ -39,7 +39,7 @@
     flex-direction: column;
     width: 100%;
     margin-top: 80px;
-    margin-bottom: 60px;
+    // margin-bottom: 60px;
     padding: 0 20px;
   }
 }
