--- a/src/components/Btn/Btn.module.scss
+++ b/src/components/Btn/Btn.module.scss
@@ -3,13 +3,14 @@
 .btn {
   background-color: var(--accent-color);
   transition: all .5s ease;
-  color:#FFFFFF;
+  color: var(--btn-text-color);
   border-color: transparent;
   box-shadow: 0px 4px 10px rgba(252, 132, 45, 0.5);
   font-weight: 700;
   font-size: var(--text-size);
   text-align: center;
   line-height: 1.2;
+
   &:focus,
   &:hover {
     background-color: #ea4f0c;
@@ -24,8 +25,9 @@
   height: 43px;
   width: 210px;
   margin: 0 auto;
+
   &:focus,
- &:hover {
+  &:hover {
     background-color: #ea4f0c;
     box-shadow: 0px 4px 20px #ea4f0c;
     border-color: transparent;
@@ -37,19 +39,22 @@
   border-radius: 30px;
   width: 182px;
   height: 44px;
+
   &:focus,
- &:hover {
+  &:hover {
     background-color: #ea4f0c;
     box-shadow: 0px 4px 20px #ea4f0c;
     border-color: transparent;
   }
 }
+
 .plus {
   composes: btn;
   width: 48px;
   height: 48px;
   border-radius: 50px;
   margin: 0 auto;
+
   &:focus,
   &:hover {
     background-color: #ea4f0c;
