--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -15,7 +15,7 @@
 }
 
 .btnContainer {
-  background-color: #eff1f3;
+  background-color: var(--btn-text-color);
   width: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -27,7 +27,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #FFFFFF;
+  background-color: var(--btn-text-color);
 }
 
 .title {
