--- a/src/components/DiaryProductList/DiaryProductList.module.scss
+++ b/src/components/DiaryProductList/DiaryProductList.module.scss
@@ -56,7 +56,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   @media screen and (min-width: 767px) {
-    height:250px;
+    // height:250px;
   }
   @media screen and (min-width: 1280px) {
     height:300px;
