--- a/src/components/ModalSearchForm/ModalSearchForm.module.scss
+++ b/src/components/ModalSearchForm/ModalSearchForm.module.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #FFFFFF;
+    background-color:var(--btn-text-color);
     z-index: 1200;
  
   }
@@ -17,7 +17,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color:#FFFFFF;
+    background-color: var(--btn-text-color);
   }  
 .container{
   background-color: #EFF1F3;
